--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://172.17.223.127:5000'
+VUE_APP_BASE_API = 'http://123.56.117.178:5000/api'
